syntax = "proto3";

package ai.metathings.service.deviced;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message RemoveFirmwareDescriptorFromFirmwareHubRequest {
	OpFirmwareHub firmware_hub = 1 [(validator.field) = {msg_exists: true}];
	OpFirmwareDescriptor firmware_descriptor = 2 [(validator.field) = {msg_exists: true}];
}
